--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	    	<ul type="square" class="list-nav">
 	        	<li><a href="#" class="active">About</a></li>
 	        	<li><a href="portofolio.html">Portofolio</a></li>
-	        	<li><a href="contact.html">Contact</a></li>
+	        	<li><a href="contact.html">Contact.</a></li>
 	      	</ul>
 	    </div>
 	    <!-- Konten -->
